# nacos-sdk-python

./: .gitignore  MANIFEST.in  README.md  README_CN.md  requirements.txt  security_300.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
example/nacos-fastapi-example/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh.md  nacos-fastapi-example.yaml  pyproject.toml
example/nacos-fastapi-example/app/: main.py  nacos_config.py  nacos_registry.py  routes.py  server.py  settings.py
example/nacos-fastapi-example/src/utils/: logging.py  trace.py
nacos/: __init__.py  auth.py  client.py  commons.py  exception.py  files.py  listener.py  params.py  task.py  timer.py
nacos/compatible/: __init__.py  nacos_event.py  nacos_exchange.py  naming_service.py
nacos/my/: __init__.py
test/: ai_client_test.py  client_test.py  client_v2_test.py  config_client_v2_test.py  test_skill_and_prompt.py
v2/: requirements.txt
v2/demo/: demo_config.py  demo_naming.py
v2/nacos/: __init__.py  nacos_client.py  property_key_constants.py
v2/nacos/ability/: client_abilities.py  client_config_ability.py  client_naming_ability.py  client_remote_ability.py
v2/nacos/ai/: nacos_ai_service.py
v2/nacos/common/: auth.py  client_config.py  client_config_builder.py  constants.py  disk_cache.py  nacos_exception.py  payload_registry.py  preserved_metadata_keys.py  utils.py
v2/nacos/config/: client_config.py  (+4 more)
z-test-sdk/: test.py
z_test_sdk/: test.py
(+271 files in other folders)
